objects/EE_Integration_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>EE_Integration_Queues</relationshipLabel>
        <relationshipName>EE_Integration_Queues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EE_Integration_Queues</relationshipLabel>
        <relationshipName>EE_Integration_Queues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>EE_Integration_Queues</relationshipLabel>
        <relationshipName>EE_Integration_Queues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubExpo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubExpo__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>EE_Integration_Queues</relationshipLabel>
        <relationshipName>EE_Integration_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EE_Integration_Queue</label>
    <nameField>
        <displayFormat>EEMCQ-{0}</displayFormat>
        <label>EE_Integration_Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EE_Integration_Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>